# track-your-tasks-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/task_tracker_mcp/: __init__.py
src/track_your_tasks_mcp/: __init__.py  __main__.py  server.py
tests/: test_server.py
