[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-tracker-mcp"
version = "0.1.0"
description = "MCP server that extracts main tasks from git commit history — filters noise, groups by scope, surfaces only features and significant fixes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "y4du-em", email = "y4du.em@gmail.com" },
]
keywords = ["mcp", "git", "tasks", "commits", "claude", "claude-code", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/y4du-em/task-tracker-mcp"
Repository = "https://github.com/y4du-em/task-tracker-mcp"
Issues = "https://github.com/y4du-em/task-tracker-mcp/issues"

[project.scripts]
task-tracker-mcp = "task_tracker_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/task_tracker_mcp"]